# Serving-1

./: CMakeLists.txt
cmake/: configure.cmake  paddlepaddle.cmake
core/general-client/: CMakeLists copy.txt
core/general-client/example/: simple_client.cpp
core/general-client/include/: brpc_client.h  client.h  grpc_client.h
core/general-client/proto/: CMakeLists.txt
core/general-client/src/: general_model.cpp  grpc_client.cpp
core/general-server/: CMakeLists.txt
core/general-server/op/: general_preprocess_op.cpp  general_preprocess_op.h
core/predictor/framework/: infer.h
core/sdk-cpp/proto/: CMakeLists.txt
doc/install/: index_CN.md
examples/C++/PaddleClas/resnet_v2_50/: preprocess.py
python/: CMakeLists.txt  gen_version.py
python/paddle_serving_client/: client.py
python/paddle_serving_server/: serve.py  server.py
python/pipeline/: local_service_handler.py
